<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="slogan">The stuff you´ve always wanted, everywhere</string>
    <string name="loading">Loading</string>
    <string name="app_name">ILmarse mobile</string>
    <string name="search_activity">Categories Search</string>
    <string name="no_data">No Categories found</string>
    <string name="hello">Welcome to ILmarse mobile</string>
    <string name="app_label">iLMarse</string>
    <string name="search_hint">Search...</string>
    <string name="product_name">Name: </string>
    <string name="product_price">Price:</string>
    <string name="product_authors"> Authors:</string>
    <string name="product_publisher"> Publisher:</string>
    <string name="product_published_date">Published Date:</string>
    <string name="product_language">Available Languages: </string>
    <string name="product_actors">Actors: </string>
    <string name="product_subtitles">Available Subtitles: </string>
    <string name="product_region">Region: </string>
    <string name="product_runtime">Run Time: </string>
    <string name="product_release_date">Release Date: </string>
    <string name="product_aspect_ratio">Aspect Ratio: </string>
    <string name="productsbutton">Products </string>
    <string name="ordersbutton">Orders </string>
    <string name="settings">Settings </string>
    <string name="order_id">Order Id: </string>
    <string name="creation_date">Creation Date: </string>
    <string name="order_status">Order Status: </string>
    <string name="settings_option_menu">Settings </string>
    <string name="about_option_menu">About </string>
    <string name="logout_option_menu">Logout </string>
    <string name="home_option_menu">Home </string>
    <string name="log_in_validation">Validating</string>
    <string name="welcome">Welcome</string>
    <string name="badlogin">Invalid username - password combination.</string>
    <string name="log_out_validation">Logging out</string>
    <string name="log_out_msg">Successfully logged out.</string>
    <string name="about_us_dialog">We Are The Best</string>
    <string name="detail_orderid">Order Id:</string>
    <string name="detail_orderstatus">Status:</string>
    <string name="detail_created_date">Creation Date:</string>
    <string name="frec_notif">Change Notification Frequency</string>
    <string name="frec_notif_title">Notification Frequency</string>
    <string name="position_change_notif">Allow Order Position Change Notifications</string>
    <string name="status_change_notif">Allow Order Status Change Notification</string>
    <string name="updated_settings">Settings Updated</string>
    <string name="internet_error">Error: You must be connected to internet.</string>
    <string name="loginusername">Username</string>
    <string name="loginpassword">Password</string>
    <string name="loginlogin">Log In</string>

</resources>