<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:background="@color/white">
    <TableRow>
	         <ImageView 
			    android:id="@+id/imview"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/product_name"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/product_name"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
    </TableRow>
    
     <TableRow>
         <TextView
            android:text="@string/product_price"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_price"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_actors"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_actors"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_language"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_language"
            android:gravity="left"
            android:padding="3dip"
            android:textColor="@color/black" />
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_subtitles"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_subtitles"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_region"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_region"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_runtime"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_runtime"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
     <TableRow>
         <TextView
            android:text="@string/product_release_date"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_release_date"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
    <TableRow>
         <TextView
            android:text="@string/product_aspect_ratio"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
          <TextView
            android:id="@+id/product_aspect_ratio"
            android:gravity="left"
            android:padding="3dip" 
            android:textColor="@color/black"/>
     </TableRow>
     
</TableLayout>