<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:stretchColumns="1" >


        <ImageView
            android:id="@+id/ordermap"
            android:layout_width="400px"
            android:layout_height="400px"
            android:layout_gravity="center" />

    <TableRow >

        <TextView
            android:gravity="left"
            android:padding="3dip"
            android:text="@string/detail_orderid"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail_orderid"
            android:gravity="left"
            android:padding="3dip"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow >

        <TextView
            android:gravity="left"
            android:padding="3dip"
            android:text="@string/detail_orderstatus"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail_orderstatus"
            android:gravity="left"
            android:padding="3dip"
            android:textColor="@color/black" />
    </TableRow>

    <TableRow >

        <TextView
            android:gravity="left"
            android:padding="3dip"
            android:text="@string/detail_created_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail_created_date"
            android:gravity="left"
            android:padding="3dip"
            android:textColor="@color/black" />
    </TableRow>

</TableLayout>